# kserve

./: .gitignore  .gitmodules  LICENSE  dune-project
src/kserve/: dune  eval.ml  kserve.ml  versions.ml
src/kserve/eval/: dune  eval.ml
src/kserve/eval_tests/: dune  eval_tests.ml
src/kserve/utils/: dune  eval_repl.ml
