(executable
 (name kserve)
 (public_name kserve)
 (promote (until-clean))
 (libraries
   httpaf httpaf-lwt-unix
   tls.lwt lwt.unix cohttp-lwt-unix
   ptime digestif str
   kxclib genslib zarith)
 (preprocess (pps kxclib.ppx))
 (flags (:standard -open Kxclib)))

(env
 (dev
  (flags (:standard -g)))
 (release
  (ocamlopt_flags (:standard -O3))))
